[tool.poetry]
name = "cycling-safety-sensors"
version = "0.1.0"
description = "API for the sensors used in Cycling Safety project."
authors = ["wuihee <wuihee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.0.0"
pyserial = "^3.5"
smbus2 = "^0.4.3"
blobconverter = "^1.4.3"
depthai = "^2.25.0.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
